Revert "Update to folder org"
This reverts commit d815a21c1ebdd22e5d079706fcba589667a3e11a.

--- a/chocolatechipcookiecake.html
+++ b/chocolatechipcookiecake.html
@@ -13,10 +13,10 @@
     <header class="tstbite-header bg-white">
       <nav class="navbar navbar-expand-lg has-header-inner px-0">
         <a class="navbar-brand" href="https://emuhly.com">
-          <img src="assets/images/logos/emuhly.png" style="max-width: 125px;">
+          <img src="assets/images/logos/emuhly.png" style="max-width: 125px;" >
         </a>
         <div class="tstbite-header-links d-flex align-items-center ms-auto order-0 order-lg-2">
-          <a href="/" class="ms-4 ms-md-4 me-2 me-md-0 circle"><img src="assets/images/logos/icon.png"></a>
+          <a href="/" class="ms-4 ms-md-4 me-2 me-md-0 circle"><img src="assets/images/logos/icon.png" alt="Avatar"></a>
         </div>
         <button class="navbar-toggler pe-0 ms-2 ms-md-3" type="button" data-bs-toggle="collapse" data-bs-target="#menu-4" aria-controls="menu-4" aria-expanded="false" aria-label="Toggle navigation">
           <svg data-name="Icon/Hamburger" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -40,7 +40,7 @@
             </svg>
             <span class="ms-2 caption font-weight-medium">100% would make this again</span>
           </strong>
-          <h5 class="py-3 mb-0 h2">Cinnamon Rolls</h5>
+          <h5 class="py-3 mb-0 h2">Chocolate Chip Cookie Cake</h5>
         </div>
       </div>
       <div class="d-flex flex-wrap">
@@ -51,13 +51,13 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="14.666" viewBox="0 0 13.333 14.666">
             <path d="M2,14.666a2,2,0,0,1-2-2V3.333a2,2,0,0,1,2-2H3.334V.667a.667.667,0,0,1,1.333,0v.667h4V.667A.667.667,0,0,1,10,.667v.667h1.333a2,2,0,0,1,2,2v9.334a2,2,0,0,1-2,2Zm-.667-2A.667.667,0,0,0,2,13.333h9.334A.667.667,0,0,0,12,12.667v-6H1.333ZM12,5.333v-2a.667.667,0,0,0-.667-.667H10v.667a.667.667,0,0,1-1.334,0V2.666h-4v.667a.667.667,0,1,1-1.333,0V2.666H2a.667.667,0,0,0-.667.667v2Z"/>
           </svg>
-          <small>December 10th, 2022</small>
+          <small>December 26th, 2022</small>
         </div>
       </div>
       <div class="blog-detail">
         <hr>
         <div class="rounded-12 overflow-hidden position-relative tstbite-svg">
-          <img src="assets/images/food/cinnamonroll.JPG" class="w-100">
+          <img src="assets/images/food/cookiecake.jpg" class="w-100" >
         </div>
         <br>
         <div class="row mt-0 mt-md-5">
@@ -65,23 +65,19 @@
             <ul class="list-unstyled component-list tstbite-svg">
               <li>
                 <small>Prep Time</small>
-                <span>30 minutes</span>
+                <span>20 minutes</span>
               </li>
               <li>
                 <small>Cook Time</small>
                 <span>25 minutes</span>
               </li>
               <li>
-                <small>Rise Time</small>
-                <span>1 hour 10 minutes</span>
-              </li>
-              <li>
                 <small>Total Time</small>
-                <span>2 hours 5 minutes</span>
+                <span>2 hours</span>
               </li>
               <li>
                 <small>Serving</small>
-                <span>10 rolls
+                <span>1 9-inch cake
                 </span>
               </li>
             </ul>
@@ -90,56 +86,49 @@
             <div class="mt-4 mt-md-5">
               <h6>Ingredients</h6>
               <div class="checklist pb-2">
-                <strong>Dough</strong>
+                <strong>Cookie Cake</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" class="form-check-input">
-                  <label class="form-check-label">2 and 3/4 cups (344g) flour (spoon & leveled)</label>
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="crackers">3/4 cup (170g) unsalted butter, softened to room temperature</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" class="form-check-input">
-                  <label class="form-check-label">1/4 cup (50g) granulated sugar</label>
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1 cup (200g) packed light or dark brown sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" class="form-check-input">
-                  <label class="form-check-label">1/2 teaspoon salt</label>
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1 large egg + 1 egg yolk, both at room temperature</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" class="form-check-input">
-                  <label class="form-check-label">3/4 cup (180ml) whole milk</label>
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="unsalted">2 teaspoons vanilla extract</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" class="form-check-input">
-                  <label class="form-check-label">3 tablespoons (45g) unsalted butter</label>
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="unsalted">2 cups (250g) all-purpose flour (spoon & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" class="form-check-input">
-                  <label class="form-check-label">1 packet instant yeast</label>
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="unsalted">2 teaspoons cornstarch</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" class="form-check-input">
-                  <label class="form-check-label">1 large egg (room temperature)</label>
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1 teaspoon baking soda</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1/2 teaspoon salt</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1 and 1/2 cup (225g) semi-sweet chocolate chips</label>
                 </div>
               </div>
               <div class="checklist pb-4">
-                <strong>Filling</strong>
+                <strong>Fudge Frosting</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" class="form-check-input">
-                  <label class="form-check-label">2/3 cup (134g) packed brown sugar</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" class="form-check-input">
-                  <label class="form-check-label">3 tablespoons (45g) unsalted butter, extra softened</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" class="form-check-input">
-                  <label class="form-check-label">2 tablespoons ground cinnamon</label>
-                </div>
-              </div>
-              <div class="checklist pb-6">
-                <strong>Cream Cheese Frosting</strong>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" class="form-check-input">
-                  <label class="form-check-label"><a href="/recipes/creamcheesefrosting" style="color: #FF6330">Cream Cheese Frosting Recipe</a></label>
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="unsalted"><a href="/fudgefrosting" style="color: #FF6330">Fudge Frosting Recipe</a></label>
                 </div>
               </div>
             </div>
@@ -150,35 +139,23 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  <b>Make the dough:</b> Whisk the flour, sugar, and salt together in a large bowl. Set aside.
+                  Preheat oven to 350°F. Spray a 9-inch pie dish or cake pan with nonstick spray. Set aside.
                 </li>
                 <li>
                   <span>2</span>
-                  Combine the milk and butter together in a heatproof bowl. Microwave or use the stove and heat until the butter has melted and the mixture is warm to the touch (about 110°F/43°C, no higher). Whisk in the yeast until it has dissolved. Pour mixture into the dry ingredients, add the egg, and stir with a sturdy rubber spatula or wooden spoon OR use a stand mixer with a paddle attachment on medium speed. Mix until a soft dough forms.
+                  In a large bowl using a hand-held mixer or stand mixer fittedwith paddle attachment, beat the butter for 1 minute on medium speed until completely smooth and creamy. Add the brown sugar and beat on medium speed until creamy, about 1 minute. Mix in egg, egg yolk, and vanilla on medium-high speed until combined. Scrape down the sides and bottom of the bowl as needed.
                 </li>
                 <li>
                   <span>3</span>
-                  Transfer dough to a lightly floured surface. Using floured hands, knead the dough for 3 minutes. You should have a smooth ball of dough. If the dough is super soft or sticky, you can add a little more flour. Place in a lightly greased bowl (I use non-stick spray), cover loosely, and let the dough rest for about 10 minutes as you get the filling ingredients ready.
+                  In a separate bowl, combine flour, cornstarch, baking soda and salt. On low speed, slowly mix into the wet ingredients until combined. The cookie dough will be quite thick. Add 1 and 1/4 cups chocolate chips and mix for about 5 seconds until evenly disbursed.
                 </li>
                 <li>
                   <span>4</span>
-                  <b>Fill the rolls:</b> After 10 minutes, roll the dough out in a 14×8-inch (36×20-cm) rectangle. Spread the softened butter on top. Mix together the cinnamon and brown sugar. Sprinkle it all over the dough. Roll up the dough to make a 14-inch log. Cut into 10–12 even rolls and arrange in a lightly greased 9- or 10-inch round cake pan, pie dish, or square baking pan.
+                  Press the cookie dough evenly into the prepared pan. Bake for 20-25 minutes or until the cake is lightly golden brown (could be up to 30 minutes, depending on your oven). Use a toothpick to test for doneness. You may want to cover the cake loosely with aluminum foil after 15 minutes to avoid heavy browning around the edges. Remove from the oven and set the pan on a wire rack to cool completely. Once cooled, use a sharp knife or metal spatula to loosen the sides of the cookie cake from the pan and transfer to a serving dish. (Or use can serve directly from the pan.)
                 </li>
                 <li>
                   <span>5</span>
-                  <b>Rise:</b> Cover the pan with aluminum foil, plastic wrap, or a clean kitchen towel. Allow the rolls to rise in a relatively warm environment for 60–90 minutes or until double in size.
-                </li>
-                <li>
-                  <span>6</span>
-                  <b>Bake the rolls:</b> After the rolls have doubled in size, preheat the oven to 375°F. Bake for 24–27 minutes, or until lightly browned. After 12 minutes of baking, loosely tent the pan with aluminum foil and continue baking to prevent heavy browning. If you want to be precise about their doneness, their internal temperature taken with an instant read thermometer should be around 195–200°F (91–93°C) when done. Remove pan from the oven and place pan on a wire rack as you make the frosting. (You can also make the frosting as the rolls bake.)
-                </li>
-                <li>
-                  <span>7</span>
-                  <b>Make the frosting:</b> Beat the butter and cream cheese in a medium bowl with an electric mixer until blended. Add powdered sugar, half-and-half, and vanilla extract, and mix until smooth. Spread over warm rolls.
-                </li>
-                <li>
-                  <span>8</span>
-                  Cover leftover frosted or unfrosted rolls tightly and store in the refrigerator for up to 5 days.
+                  Decorate the cooled cookie cake with frosting using a Wilton piping bag and tip. Depending how much frosting you use, you may have some leftover. Cookie cake remains fresh covered tightly at room temperature for up to 3 days.
                 </li>
               </ul>
             </div>
