--- a/cinnamonrolls.html
+++ b/cinnamonrolls.html
@@ -13,10 +13,10 @@
     <header class="tstbite-header bg-white">
       <nav class="navbar navbar-expand-lg has-header-inner px-0">
         <a class="navbar-brand" href="https://emuhly.com">
-          <img src="assets/images/logos/emuhly.png" style="max-width: 125px;" >
+          <img src="assets/images/logos/emuhly.png" style="max-width: 125px;">
         </a>
         <div class="tstbite-header-links d-flex align-items-center ms-auto order-0 order-lg-2">
-          <a href="/" class="ms-4 ms-md-4 me-2 me-md-0 circle"><img src="assets/images/logos/icon.png" alt="Avatar"></a>
+          <a href="/" class="ms-4 ms-md-4 me-2 me-md-0 circle"><img src="assets/images/logos/icon.png"></a>
         </div>
         <button class="navbar-toggler pe-0 ms-2 ms-md-3" type="button" data-bs-toggle="collapse" data-bs-target="#menu-4" aria-controls="menu-4" aria-expanded="false" aria-label="Toggle navigation">
           <svg data-name="Icon/Hamburger" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -40,12 +40,12 @@
             </svg>
             <span class="ms-2 caption font-weight-medium">100% would make this again</span>
           </strong>
-          <h5 class="py-3 mb-0 h2">Pumpkin Cookies</h5>
+          <h5 class="py-3 mb-0 h2">Cinnamon Rolls</h5>
         </div>
       </div>
       <div class="d-flex flex-wrap">
         <div class="my-2 me-4">
-          <small class="ps-1">Author: Cooking Classy</small>
+          <small class="ps-1">Author: Sally's Baking Addiction</small>
         </div>
         <div class="my-2 me-4">
           <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="14.666" viewBox="0 0 13.333 14.666">
@@ -57,7 +57,7 @@
       <div class="blog-detail">
         <hr>
         <div class="rounded-12 overflow-hidden position-relative tstbite-svg">
-          <img src="assets/images/food/pumpkincookies.jpg" class="w-100" >
+          <img src="assets/images/food/cinnamonroll.JPG" class="w-100">
         </div>
         <br>
         <div class="row mt-0 mt-md-5">
@@ -69,15 +69,19 @@
               </li>
               <li>
                 <small>Cook Time</small>
-                <span>30 minutes</span>
+                <span>25 minutes</span>
+              </li>
+              <li>
+                <small>Rise Time</small>
+                <span>1 hour 10 minutes</span>
               </li>
               <li>
                 <small>Total Time</small>
-                <span>1 hour</span>
+                <span>2 hours 5 minutes</span>
               </li>
               <li>
                 <small>Serving</small>
-                <span>15 cookies
+                <span>10 rolls
                 </span>
               </li>
             </ul>
@@ -86,61 +90,56 @@
             <div class="mt-4 mt-md-5">
               <h6>Ingredients</h6>
               <div class="checklist pb-2">
-                <strong>Cookies</strong>
+                <strong>Dough</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">2 cups (284g) flour (spoon & leveled)</label>
+                  <input type="checkbox" class="form-check-input">
+                  <label class="form-check-label">2 and 3/4 cups (344g) flour (spoon & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 teaspoon baking soda</label>
+                  <input type="checkbox" class="form-check-input">
+                  <label class="form-check-label">1/4 cup (50g) granulated sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/2 teaspoon baking powder</label>
+                  <input type="checkbox" class="form-check-input">
+                  <label class="form-check-label">1/2 teaspoon salt</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">3/4 teaspoon salt</label>
+                  <input type="checkbox" class="form-check-input">
+                  <label class="form-check-label">3/4 cup (180ml) whole milk</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted"> 2 1/2 teaspoons pumpkin pie spice</label>
+                  <input type="checkbox" class="form-check-input">
+                  <label class="form-check-label">3 tablespoons (45g) unsalted butter</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">10 tablespoons (140g) unsalted butter, softened</label>
+                  <input type="checkbox" class="form-check-input">
+                  <label class="form-check-label">1 packet instant yeast</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">3/4 cup (160g) granulated sugar</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/2 cup (110g) packed light brown sugar</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 large egg</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 teaspoon vanilla extract</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 cup (243g) canned pumpkin</label>
+                  <input type="checkbox" class="form-check-input">
+                  <label class="form-check-label">1 large egg (room temperature)</label>
                 </div>
               </div>
               <div class="checklist pb-4">
-                <strong>Cream Cheese Frosting</strong>
+                <strong>Filling</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted"><a href="/recipes/creamcheesefrosting" style="color: #FF6330">Cream Cheese Frosting Recipe</a></label>
+                  <input type="checkbox" class="form-check-input">
+                  <label class="form-check-label">2/3 cup (134g) packed brown sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">Pumpkin pie spice (optional, for topping)</label>
+                  <input type="checkbox" class="form-check-input">
+                  <label class="form-check-label">3 tablespoons (45g) unsalted butter, extra softened</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" class="form-check-input">
+                  <label class="form-check-label">2 tablespoons ground cinnamon</label>
+                </div>
+              </div>
+              <div class="checklist pb-6">
+                <strong>Cream Cheese Frosting</strong>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" class="form-check-input">
+                  <label class="form-check-label"><a href="/creamcheesefrosting" style="color: #FF6330">Cream Cheese Frosting Recipe</a></label>
                 </div>
               </div>
             </div>
@@ -151,31 +150,35 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  Preheat oven to 350°F and line two baking sheets with parchment paper. Set aside.
+                  <b>Make the dough:</b> Whisk the flour, sugar, and salt together in a large bowl. Set aside.
                 </li>
                 <li>
                   <span>2</span>
-                  In a medium mixing bowl whisk together flour, baking soda, baking powder, salt, cinnamon, nutmeg, ginger and cloves for 20 seconds. Set aside.
+                  Combine the milk and butter together in a heatproof bowl. Microwave or use the stove and heat until the butter has melted and the mixture is warm to the touch (about 110°F/43°C, no higher). Whisk in the yeast until it has dissolved. Pour mixture into the dry ingredients, add the egg, and stir with a sturdy rubber spatula or wooden spoon OR use a stand mixer with a paddle attachment on medium speed. Mix until a soft dough forms.
                 </li>
                 <li>
                   <span>3</span>
-                  In the bowl of an electric stand mixer fitted with the paddle attachment cream together butter, granulated sugar and brown sugar until well combined.
+                  Transfer dough to a lightly floured surface. Using floured hands, knead the dough for 3 minutes. You should have a smooth ball of dough. If the dough is super soft or sticky, you can add a little more flour. Place in a lightly greased bowl (I use non-stick spray), cover loosely, and let the dough rest for about 10 minutes as you get the filling ingredients ready.
                 </li>
                 <li>
                   <span>4</span>
-                  Mix in egg, then blend in pumpkin and vanilla. Add in flour mixture and mix just until combined.
+                  <b>Fill the rolls:</b> After 10 minutes, roll the dough out in a 14×8-inch (36×20-cm) rectangle. Spread the softened butter on top. Mix together the cinnamon and brown sugar. Sprinkle it all over the dough. Roll up the dough to make a 14-inch log. Cut into 10–12 even rolls and arrange in a lightly greased 9- or 10-inch round cake pan, pie dish, or square baking pan.
                 </li>
                 <li>
                   <span>5</span>
-                  Scoop dough out using a cookie scoop (filling it just slightly heaping). Drop onto prepared baking sheet spacing cookies 2-inches apart.
+                  <b>Rise:</b> Cover the pan with aluminum foil, plastic wrap, or a clean kitchen towel. Allow the rolls to rise in a relatively warm environment for 60–90 minutes or until double in size.
                 </li>
                 <li>
                   <span>6</span>
-                  Bake one sheet at a time until cookies are set, about 13 - 15 minutes. Cool on baking sheet several minutes then transfer to a wire rack to cool completely.
+                  <b>Bake the rolls:</b> After the rolls have doubled in size, preheat the oven to 375°F. Bake for 24–27 minutes, or until lightly browned. After 12 minutes of baking, loosely tent the pan with aluminum foil and continue baking to prevent heavy browning. If you want to be precise about their doneness, their internal temperature taken with an instant read thermometer should be around 195–200°F (91–93°C) when done. Remove pan from the oven and place pan on a wire rack as you make the frosting. (You can also make the frosting as the rolls bake.)
                 </li>
                 <li>
                   <span>7</span>
-                  Once cool, frost cookies with cream cheese frosting (optional). Store in an airtight container in a single layer in refrigerator. Bring to room temperature before serving.
+                  <b>Make the frosting:</b> Beat the butter and cream cheese in a medium bowl with an electric mixer until blended. Add powdered sugar, half-and-half, and vanilla extract, and mix until smooth. Spread over warm rolls.
+                </li>
+                <li>
+                  <span>8</span>
+                  Cover leftover frosted or unfrosted rolls tightly and store in the refrigerator for up to 5 days.
                 </li>
               </ul>
             </div>
