--- a/gfdfv.html
+++ b/gfdfv.html
@@ -32,31 +32,31 @@
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/recipes/volcanosalmon" class="tstbite-animation rounded-6">
+            <a href="/volcanosalmon" class="tstbite-animation rounded-6">
               <img src="assets/images/food/volcanosalmon.jpg" class="w-100" alt="Volcano Salmon">
             </a>
             <figcaption class="mt-2">
-              <a href="/recipes/volcanosalmon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Volcano Salmon</a>
+              <a href="/volcanosalmon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Volcano Salmon</a>
             </figcaption>
           </figure>
         </div>
          <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/recipes/comingsoon" class="tstbite-animation rounded-6">
+            <a href="/comingsoon" class="tstbite-animation rounded-6">
               <img src="assets/images/food/comingsoonlogo.png" class="w-100" alt="Soy Ginger Chilean Sea Bass">
             </a>
             <figcaption class="mt-2">
-              <a href="/recipes/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Soy Ginger Chilean Sea Bass</a>
+              <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Soy Ginger Chilean Sea Bass</a>
             </figcaption>
           </figure>
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/recipes/comingsoon" class="tstbite-animation rounded-6">
+            <a href="/comingsoon" class="tstbite-animation rounded-6">
               <img src="assets/images/food/comingsoonlogo.png" class="w-100" alt="Fine Herb Dressing">
             </a>
             <figcaption class="mt-2">
-              <a href="/recipes/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Fine Herb Dressing</a>
+              <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Fine Herb Dressing</a>
             </figcaption>
           </figure>
         </div>
@@ -64,31 +64,31 @@
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/recipes/comingsoon" class="tstbite-animation rounded-6">
+            <a href="/comingsoon" class="tstbite-animation rounded-6">
               <img src="assets/images/food/comingsoonlogo.png" class="w-100" alt="Kimchi Fried Rice">
             </a>
             <figcaption class="mt-2">
-              <a href="/recipes/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Kimchi Fried Rice</a>
+              <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Kimchi Fried Rice</a>
             </figcaption>
           </figure>
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/recipes/comingsoon" class="tstbite-animation rounded-6">
+            <a href="/comingsoon" class="tstbite-animation rounded-6">
               <img src="assets/images/food/comingsoonlogo.png" class="w-100" alt="Bread Crumb Mustard Chicken">
             </a>
             <figcaption class="mt-2">
-              <a href="/recipes/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Bread Crumb Mustard Chicken</a>
+              <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Bread Crumb Mustard Chicken</a>
             </figcaption>
           </figure>
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/recipes/comingsoon" class="tstbite-animation rounded-6">
+            <a href="/comingsoon" class="tstbite-animation rounded-6">
               <img src="assets/images/food/comingsoonlogo.png" class="w-100" alt="Dinner Rolls">
             </a>
             <figcaption class="mt-2">
-              <a href="/recipes/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Dinner Rolls</a>
+              <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Dinner Rolls</a>
             </figcaption>
           </figure>
         </div>
@@ -96,11 +96,11 @@
         <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/recipes/comingsoon" class="tstbite-animation rounded-6">
+            <a href="/comingsoon" class="tstbite-animation rounded-6">
               <img src="assets/images/food/comingsoonlogo.png" class="w-100" alt="Chocolate Avocado Cookies">
             </a>
             <figcaption class="mt-2">
-              <a href="/recipes/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Avocado Cookies</a>
+              <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Avocado Cookies</a>
             </figcaption>
           </figure>
         </div>
