--- a/healthierdesserts.html
+++ b/healthierdesserts.html
@@ -31,31 +31,31 @@
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/recipes/sourcherrystrudel" class="tstbite-animation rounded-6">
+            <a href="/sourcherrystrudel" class="tstbite-animation rounded-6">
               <img src="assets/images/food/sourcherrystrudel.jpg" class="w-100" alt="Sour Cherry Strudel">
             </a>
             <figcaption class="mt-2">
-              <a href="/recipes/sourcherrystrudel" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Sour Cherry Strudel</a>
+              <a href="/sourcherrystrudel" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Sour Cherry Strudel</a>
             </figcaption>
           </figure>
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/recipes/baklava" class="tstbite-animation rounded-6">
+            <a href="/baklava" class="tstbite-animation rounded-6">
               <img src="assets/images/food/baklava.jpeg" class="w-100" alt="Baklava">
             </a>
             <figcaption class="mt-2">
-              <a href="/recipes/baklava" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Baklava</a>
+              <a href="/baklava" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Baklava</a>
             </figcaption>
           </figure>
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/recipes/meringues" class="tstbite-animation rounded-6">
+            <a href="/meringues" class="tstbite-animation rounded-6">
               <img src="assets/images/food/meringues.jpg" class="w-100" alt="Meringues">
             </a>
             <figcaption class="mt-2">
-              <a href="/recipes/meringues" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Meringues</a>
+              <a href="/meringues" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Meringues</a>
             </figcaption>
           </figure>
         </div>
@@ -63,21 +63,21 @@
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/recipes/hazelnuttruffles" class="tstbite-animation rounded-6">
+            <a href="/hazelnuttruffles" class="tstbite-animation rounded-6">
               <img src="assets/images/food/hazelnuttruffles.JPG" class="w-100" alt="Hazelnut Truffles">
             </a>
             <figcaption class="mt-2">
-              <a href="/recipes/hazelnuttruffles" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Hazelnut Truffles</a>
+              <a href="/hazelnuttruffles" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Hazelnut Truffles</a>
             </figcaption>
           </figure>
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/recipes/brownies" class="tstbite-animation rounded-6">
+            <a href="/brownies" class="tstbite-animation rounded-6">
               <img src="assets/images/food/brownies.png" class="w-100" alt="Brownies">
             </a>
             <figcaption class="mt-2">
-              <a href="/recipes/brownies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Brownies</a>
+              <a href="/brownies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Brownies</a>
             </figcaption>
           </figure>
         </div>
