--- a/lares.html
+++ b/lares.html
@@ -27,58 +27,51 @@
     </header>
 
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0">Cookies</h5>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/recipes/pumpkincookies" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/pumpkincookies.jpg" class="w-100" alt="Pumpkin Cookies">
+      <h5 class="py-3 mb-0">Los Angeles</h5>
+      <!-- <div class="row">
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/restaurants" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/cookieicon.jpeg" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/recipes/pumpkincookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pumpkin Cookies</a>
+              <a href="/restaurants" class="tstbite-category-title">Restaurants</a>
             </figcaption>
           </figure>
         </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/recipes/chocolatechipcookies" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/chocolatechipcookies.jpg" class="w-100" alt="Chocolate Chip Cookies">
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/healthierdesserts" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/meringuesicon.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/recipes/chocolatechipcookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pudding Chocolate Chip Cookies</a>
+              <a href="/healthierdesserts" class="tstbite-category-title">Desserts</a>
             </figcaption>
           </figure>
         </div>
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/recipes/chocolatechipcookiecake" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/cookiecake.jpg" class="w-100" alt="Chocolate Chip Cookie Cake">
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/breads" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/breadsicon.jpeg" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/recipes/chocolatechipcookiecake" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Chip Cookie Cake</a>
+              <a href="/breads" class="tstbite-category-title">Bakeries/Cafes</a>
             </figcaption>
           </figure>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <figure class="my-3 tstbite-card">
-            <a href="/recipes/mnmcookies" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/mandmcookies.jpg" class="w-100" alt="Mini M&M Chocolate Chip Cookies">
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/bars" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/butterbarsicon.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/recipes/mnmcookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Mini M&M Chocolate Chip Cookies</a>
+              <a href="/bars" class="tstbite-category-title">Other</a>
             </figcaption>
           </figure>
         </div>
-      </div>
+      </div> -->
     </section>
   </div>
-
-  <footer class="tstbite-footer pt-3 pt-md-5 mt-5 bg-lightest-gray">
-    <div class="container">
-    </div>
-  </footer>
 </section>
 
 <!-- Tastebite Scripts -->
