--- a/monkeybread.html
+++ b/monkeybread.html
@@ -132,7 +132,7 @@
                 <strong>Cream Cheese Frosting</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted"><a href="/recipes/creamcheesefrosting" style="color: #FF6330">Cream Cheese Frosting Recipe</a></label>
+                  <label class="form-check-label" for="unsalted"><a href="/creamcheesefrosting" style="color: #FF6330">Cream Cheese Frosting Recipe</a></label>
                 </div>
               </div>
             </div>
