--- a/pumpkincookies.html
+++ b/pumpkincookies.html
@@ -40,24 +40,24 @@
             </svg>
             <span class="ms-2 caption font-weight-medium">100% would make this again</span>
           </strong>
-          <h5 class="py-3 mb-0 h2">Chocolate Chip Cookie Cake</h5>
+          <h5 class="py-3 mb-0 h2">Pumpkin Cookies</h5>
         </div>
       </div>
       <div class="d-flex flex-wrap">
         <div class="my-2 me-4">
-          <small class="ps-1">Author: Sally's Baking Addiction</small>
+          <small class="ps-1">Author: Cooking Classy</small>
         </div>
         <div class="my-2 me-4">
           <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="14.666" viewBox="0 0 13.333 14.666">
             <path d="M2,14.666a2,2,0,0,1-2-2V3.333a2,2,0,0,1,2-2H3.334V.667a.667.667,0,0,1,1.333,0v.667h4V.667A.667.667,0,0,1,10,.667v.667h1.333a2,2,0,0,1,2,2v9.334a2,2,0,0,1-2,2Zm-.667-2A.667.667,0,0,0,2,13.333h9.334A.667.667,0,0,0,12,12.667v-6H1.333ZM12,5.333v-2a.667.667,0,0,0-.667-.667H10v.667a.667.667,0,0,1-1.334,0V2.666h-4v.667a.667.667,0,1,1-1.333,0V2.666H2a.667.667,0,0,0-.667.667v2Z"/>
           </svg>
-          <small>December 26th, 2022</small>
+          <small>December 10th, 2022</small>
         </div>
       </div>
       <div class="blog-detail">
         <hr>
         <div class="rounded-12 overflow-hidden position-relative tstbite-svg">
-          <img src="assets/images/food/cookiecake.jpg" class="w-100" >
+          <img src="assets/images/food/pumpkincookies.jpg" class="w-100" >
         </div>
         <br>
         <div class="row mt-0 mt-md-5">
@@ -65,19 +65,19 @@
             <ul class="list-unstyled component-list tstbite-svg">
               <li>
                 <small>Prep Time</small>
-                <span>20 minutes</span>
+                <span>30 minutes</span>
               </li>
               <li>
                 <small>Cook Time</small>
-                <span>25 minutes</span>
+                <span>30 minutes</span>
               </li>
               <li>
                 <small>Total Time</small>
-                <span>2 hours</span>
+                <span>1 hour</span>
               </li>
               <li>
                 <small>Serving</small>
-                <span>1 9-inch cake
+                <span>15 cookies
                 </span>
               </li>
             </ul>
@@ -86,30 +86,10 @@
             <div class="mt-4 mt-md-5">
               <h6>Ingredients</h6>
               <div class="checklist pb-2">
-                <strong>Cookie Cake</strong>
+                <strong>Cookies</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">3/4 cup (170g) unsalted butter, softened to room temperature</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 cup (200g) packed light or dark brown sugar</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 large egg + 1 egg yolk, both at room temperature</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">2 teaspoons vanilla extract</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">2 cups (250g) all-purpose flour (spoon & leveled)</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">2 teaspoons cornstarch</label>
+                  <label class="form-check-label" for="crackers">2 cups (284g) flour (spoon & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
@@ -117,18 +97,50 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/2 teaspoon salt</label>
+                  <label class="form-check-label" for="unsalted">1/2 teaspoon baking powder</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 and 1/2 cup (225g) semi-sweet chocolate chips</label>
+                  <label class="form-check-label" for="unsalted">3/4 teaspoon salt</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="unsalted"> 2 1/2 teaspoons pumpkin pie spice</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="unsalted">10 tablespoons (140g) unsalted butter, softened</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="unsalted">3/4 cup (160g) granulated sugar</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1/2 cup (110g) packed light brown sugar</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1 large egg</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1 teaspoon vanilla extract</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1 cup (243g) canned pumpkin</label>
                 </div>
               </div>
               <div class="checklist pb-4">
-                <strong>Fudge Frosting</strong>
+                <strong>Cream Cheese Frosting</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted"><a href="/recipes/fudgefrosting" style="color: #FF6330">Fudge Frosting Recipe</a></label>
+                  <label class="form-check-label" for="unsalted"><a href="/creamcheesefrosting" style="color: #FF6330">Cream Cheese Frosting Recipe</a></label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="unsalted">Pumpkin pie spice (optional, for topping)</label>
                 </div>
               </div>
             </div>
@@ -139,23 +151,31 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  Preheat oven to 350°F. Spray a 9-inch pie dish or cake pan with nonstick spray. Set aside.
+                  Preheat oven to 350°F and line two baking sheets with parchment paper. Set aside.
                 </li>
                 <li>
                   <span>2</span>
-                  In a large bowl using a hand-held mixer or stand mixer fittedwith paddle attachment, beat the butter for 1 minute on medium speed until completely smooth and creamy. Add the brown sugar and beat on medium speed until creamy, about 1 minute. Mix in egg, egg yolk, and vanilla on medium-high speed until combined. Scrape down the sides and bottom of the bowl as needed.
+                  In a medium mixing bowl whisk together flour, baking soda, baking powder, salt, cinnamon, nutmeg, ginger and cloves for 20 seconds. Set aside.
                 </li>
                 <li>
                   <span>3</span>
-                  In a separate bowl, combine flour, cornstarch, baking soda and salt. On low speed, slowly mix into the wet ingredients until combined. The cookie dough will be quite thick. Add 1 and 1/4 cups chocolate chips and mix for about 5 seconds until evenly disbursed.
+                  In the bowl of an electric stand mixer fitted with the paddle attachment cream together butter, granulated sugar and brown sugar until well combined.
                 </li>
                 <li>
                   <span>4</span>
-                  Press the cookie dough evenly into the prepared pan. Bake for 20-25 minutes or until the cake is lightly golden brown (could be up to 30 minutes, depending on your oven). Use a toothpick to test for doneness. You may want to cover the cake loosely with aluminum foil after 15 minutes to avoid heavy browning around the edges. Remove from the oven and set the pan on a wire rack to cool completely. Once cooled, use a sharp knife or metal spatula to loosen the sides of the cookie cake from the pan and transfer to a serving dish. (Or use can serve directly from the pan.)
+                  Mix in egg, then blend in pumpkin and vanilla. Add in flour mixture and mix just until combined.
                 </li>
                 <li>
                   <span>5</span>
-                  Decorate the cooled cookie cake with frosting using a Wilton piping bag and tip. Depending how much frosting you use, you may have some leftover. Cookie cake remains fresh covered tightly at room temperature for up to 3 days.
+                  Scoop dough out using a cookie scoop (filling it just slightly heaping). Drop onto prepared baking sheet spacing cookies 2-inches apart.
+                </li>
+                <li>
+                  <span>6</span>
+                  Bake one sheet at a time until cookies are set, about 13 - 15 minutes. Cool on baking sheet several minutes then transfer to a wire rack to cool completely.
+                </li>
+                <li>
+                  <span>7</span>
+                  Once cool, frost cookies with cream cheese frosting (optional). Store in an airtight container in a single layer in refrigerator. Bring to room temperature before serving.
                 </li>
               </ul>
             </div>
