--- a/restaurants.html
+++ b/restaurants.html
@@ -27,11 +27,11 @@
     </header>
 
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0"><a href="/favoritespots/sandiegores" style="color: #FF6330">San Diego</a></h5>
-      <h5 class="py-3 mb-0"><a href="/favoritespots/vegasres" style="color: #FF6330">Las Vegas</a></h5>
-      <h5 class="py-3 mb-0"><a href="/favoritespots/newyorkres" style="color: #FF6330">New York</a></h5>
-      <h5 class="py-3 mb-0"><a href="/recipes/comingsoon" style="color: #FF6330">Arizona</a></h5>
-      <h5 class="py-3 mb-0"><a href="/recipes/comingsoon" style="color: #FF6330">Los Angeles</a></h5>
+      <h5 class="py-3 mb-0"><a href="/sandiegores" style="color: #FF6330">San Diego</a></h5>
+      <h5 class="py-3 mb-0"><a href="/vegasres" style="color: #FF6330">Las Vegas</a></h5>
+      <h5 class="py-3 mb-0"><a href="/newyorkres" style="color: #FF6330">New York</a></h5>
+      <h5 class="py-3 mb-0"><a href="/comingsoon" style="color: #FF6330">Arizona</a></h5>
+      <h5 class="py-3 mb-0"><a href="/comingsoon" style="color: #FF6330">Los Angeles</a></h5>
     </section>
   </div>
 </section>
