--- a/food.html
+++ b/food.html
@@ -16,7 +16,7 @@
           <img src="assets/images/logos/emuhly.png" style="max-width: 125px;" >
         </a>
         <div class="tstbite-header-links d-flex align-items-center ms-auto order-0 order-lg-2">
-          <a  class="ms-4 ms-md-4 me-2 me-md-0 circle"><img src="assets/images/logos/icon.png" alt="Avatar"></a>
+          <a href="/" class="ms-4 ms-md-4 me-2 me-md-0 circle"><img src="assets/images/logos/icon.png" alt="Avatar"></a>
         </div>
         <button class="navbar-toggler pe-0 ms-2 ms-md-3" type="button" data-bs-toggle="collapse" data-bs-target="#menu-4" aria-controls="menu-4" aria-expanded="false" aria-label="Toggle navigation">
           <svg data-name="Icon/Hamburger" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -27,11 +27,49 @@
     </header>
 
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0"><a href="/favoritespots/sandiegobakeries" style="color: #FF6330">San Diego</a></h5>
-      <h5 class="py-3 mb-0"><a href="/favoritespots/vegasbakeries" style="color: #FF6330">Las Vegas</a></h5>
-      <h5 class="py-3 mb-0"><a href="/favoritespots/newyorkbakeries" style="color: #FF6330">New York</a></h5>
-      <h5 class="py-3 mb-0"><a href="/recipes/comingsoon" style="color: #FF6330">Arizona</a></h5>
-      <h5 class="py-3 mb-0"><a href="/recipes/comingsoon" style="color: #FF6330">Los Angeles</a></h5>
+      <h5 class="py-3 mb-0">Food</h5>
+      <div class="row">
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/restaurants" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/restaurant.png" class="rounded-circle" >
+            </a>
+            <figcaption class="mt-2">
+              <a href="/restaurants" class="tstbite-category-title">Restaurants</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/healthierdesserts" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/desserts.png" class="rounded-circle" >
+            </a>
+            <figcaption class="mt-2">
+              <a href="/healthierdesserts" class="tstbite-category-title">Desserts</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/breads" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/bakeries.png" class="rounded-circle" >
+            </a>
+            <figcaption class="mt-2">
+              <a href="/breads" class="tstbite-category-title">Bakeries/Cafes</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/bars" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/other.png" class="rounded-circle" >
+            </a>
+            <figcaption class="mt-2">
+              <a href="/bars" class="tstbite-category-title">Other</a>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
     </section>
   </div>
 </section>
