--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </strong>
             <h4 class="my-3">Cinnamon Rolls</h4>
             <p class="big pe-0 pe-md-5 pb-3 pb-sm-5 pb-lg-0">Fluffy dough, a rich cinnamon sugar filling, and a thick cream cheese frosting make for the most perfect cinnamon roll yet.</p>
-            <a href="/recipes/cinnamonrolls" class="circle circle-lg tstbite-arrow">
+            <a href="/cinnamonrolls" class="circle circle-lg tstbite-arrow">
               <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="13.333" viewBox="0 0 13.333 13.333">
                 <path d="M6.077,13.089a.833.833,0,0,1,0-1.178L10.488,7.5H.833a.833.833,0,0,1,0-1.667h9.655L6.077,1.423A.834.834,0,0,1,7.256.244l5.829,5.83a.833.833,0,0,1,0,1.186L7.256,13.089a.834.834,0,0,1-1.179,0Z" fill="#ff642f"/>
               </svg>
@@ -56,61 +56,61 @@
       <div class="row">
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/categories/cookies" class="tstbite-animation stretched-link rounded-circle">
+            <a href="/cookies" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/cookieicon.jpeg" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/categories/cookies" class="tstbite-category-title">Cookies</a>
+              <a href="/cookies" class="tstbite-category-title">Cookies</a>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/categories/breads" class="tstbite-animation stretched-link rounded-circle">
+            <a href="/breads" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/breadsicon.jpeg" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/categories/breads" class="tstbite-category-title">Breads</a>
+              <a href="/breads" class="tstbite-category-title">Breads</a>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/categories/healthierdesserts" class="tstbite-animation stretched-link rounded-circle">
+            <a href="/healthierdesserts" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/meringuesicon.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/categories/healthierdesserts" class="tstbite-category-title">Healthier Desserts</a>
+              <a href="/healthierdesserts" class="tstbite-category-title">Healthier Desserts</a>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/categories/bars" class="tstbite-animation stretched-link rounded-circle">
+            <a href="/bars" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/butterbarsicon.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/categories/bars" class="tstbite-category-title">Bars</a>
+              <a href="/bars" class="tstbite-category-title">Bars</a>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/categories/other" class="tstbite-animation stretched-link rounded-circle">
+            <a href="/other" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/pancakesicon.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/categories/other" class="tstbite-category-title">Other</a>
+              <a href="/other" class="tstbite-category-title">Other</a>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/categories/gfdfv" class="tstbite-animation stretched-link rounded-circle">
+            <a href="/gfdfv" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/savoryicon.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/categories/gfdfv" class="tstbite-category-title">GF, DF, V</a>
+              <a href="/gfdfv" class="tstbite-category-title">GF, DF, V</a>
             </figcaption>
           </figure>
         </div>
@@ -122,31 +122,31 @@
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/recipes/cinnamonrolls" class="tstbite-animation rounded-6">
+            <a href="/cinnamonrolls" class="tstbite-animation rounded-6">
               <img src="assets/images/food/cinnamonrolls.png" class="w-100">
             </a>
             <figcaption class="mt-2">
-              <a href="/recipes/cinnamonrolls" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Cinnamon Rolls</a>
+              <a href="/cinnamonrolls" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Cinnamon Rolls</a>
             </figcaption>
           </figure>
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/recipes/monkeybread" class="tstbite-animation rounded-6">
+            <a href="/monkeybread" class="tstbite-animation rounded-6">
               <img src="assets/images/food/monkeybread.jpeg" class="w-100">
             </a>
             <figcaption class="mt-2">
-              <a href="/recipes/monkeybread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Monkey Bread Muffins</a>
+              <a href="/monkeybread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Monkey Bread Muffins</a>
             </figcaption>
           </figure>
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/recipes/pumpkinbread" class="tstbite-animation rounded-6">
+            <a href="/pumpkinbread" class="tstbite-animation rounded-6">
               <img src="assets/images/food/pumpkinloaf.png" class="w-100">
             </a>
             <figcaption class="mt-2">
-              <a href="/recipes/pumpkinbread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pumpkin Bread</a>
+              <a href="/pumpkinbread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pumpkin Bread</a>
             </figcaption>
           </figure>
         </div>
@@ -154,31 +154,31 @@
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/recipes/biscuits" class="tstbite-animation rounded-6">
+            <a href="/biscuits" class="tstbite-animation rounded-6">
               <img src="assets/images/food/biscuits.jpg" class="w-100">
             </a>
             <figcaption class="mt-2">
-              <a href="/recipes/biscuits" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Biscuits</a>
+              <a href="/biscuits" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Biscuits</a>
             </figcaption>
           </figure>
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/recipes/creampuffs" class="tstbite-animation rounded-6">
+            <a href="/creampuffs" class="tstbite-animation rounded-6">
               <img src="assets/images/food/creampuffs.jpg" class="w-100">
             </a>
             <figcaption class="mt-2">
-              <a href="/recipes/creampuffs" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Cream Puffs</a>
+              <a href="/creampuffs" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Cream Puffs</a>
             </figcaption>
           </figure>
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/recipes/baklava" class="tstbite-animation rounded-6">
+            <a href="/baklava" class="tstbite-animation rounded-6">
               <img src="assets/images/food/baklava.jpeg" class="w-100">
             </a>
             <figcaption class="mt-2">
-              <a href="/recipes/baklava" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Baklava</a>
+              <a href="/baklava" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Baklava</a>
             </figcaption>
           </figure>
         </div>
@@ -190,41 +190,41 @@
       <div class="row">
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/favoritespots/restaurants" class="tstbite-animation stretched-link rounded-circle">
+            <a href="/restaurants" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/restaurant.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/favoritespots/restaurants" class="tstbite-category-title">Restaurants</a>
+              <a href="/restaurants" class="tstbite-category-title">Restaurants</a>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/favoritespots/desserts" class="tstbite-animation stretched-link rounded-circle">
+            <a href="/desserts" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/desserts.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/favoritespots/desserts" class="tstbite-category-title">Desserts</a>
+              <a href="/desserts" class="tstbite-category-title">Desserts</a>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/favoritespots/bakeries" class="tstbite-animation stretched-link rounded-circle">
+            <a href="/bakeries" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/bakeries.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/favoritespots/bakeries" class="tstbite-category-title">Bakeries</a>
+              <a href="/bakeries" class="tstbite-category-title">Bakeries</a>
             </figcaption>
           </figure>
         </div>
         <!-- <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/categories/other" class="tstbite-animation stretched-link rounded-circle">
+            <a href="/other" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/other.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/categories/other" class="tstbite-category-title">Other</a>
+              <a href="/other" class="tstbite-category-title">Other</a>
             </figcaption>
           </figure>
         </div> -->
