--- a/savory.html
+++ b/savory.html
@@ -27,13 +27,59 @@
     </header>
 
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0"><a href="/sandiegodesserts" style="color: #FF6330">San Diego</a></h5>
-      <h5 class="py-3 mb-0"><a href="/recipes/comingsoon" style="color: #FF6330">Las Vegas</a></h5>
-      <h5 class="py-3 mb-0"><a href="/newyorkdesserts" style="color: #FF6330">New York</a></h5>
-      <h5 class="py-3 mb-0"><a href="/recipes/comingsoon" style="color: #FF6330">Arizona</a></h5>
-      <h5 class="py-3 mb-0"><a href="/recipes/comingsoon" style="color: #FF6330">Los Angeles</a></h5>
+      <h5 class="py-3 mb-0">Savory</h5>
+      <div class="row">
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/fusilliallavodka" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/fusilliallavodka.png" class="w-100" alt="Fusilli Alla Vodka">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/fusilliallavodka" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Fusilli Alla Vodka</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/lettucecups" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/lettucecups.jpg" class="w-100" alt="Lettuce Cups">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/lettucecups" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chicken Teriyaki Lettuce Cups</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/tofu" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/tofu.jpg" class="w-100" alt="Tofu">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/tofu" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Crispy Baked Tofu</a>
+            </figcaption>
+          </figure>
+        </div>
+        </div>
+        <div class="row">
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/soup" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/chickennoodlesoup.jpg" class="w-100" alt="Lettuce Cups">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/soup" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chicken Noodle Soup</a>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
+      </div>
     </section>
   </div>
+
+  <footer class="tstbite-footer pt-3 pt-md-5 mt-5 bg-lightest-gray">
+    <div class="container">
+    </div>
+  </footer>
 </section>
 
 <!-- Tastebite Scripts -->
