--- a/gfdfv.html
+++ b/gfdfv.html
@@ -46,17 +46,17 @@
               <img src="assets/images/food/comingsoonlogo.png" class="w-100" alt="Soy Ginger Chilean Sea Bass">
             </a>
             <figcaption class="mt-2">
-              <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Soy Ginger Chilean Sea Bass</a>
+              <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">'Soy' Ginger Chilean Sea Bass</a>
             </figcaption>
           </figure>
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/comingsoon" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/comingsoonlogo.png" class="w-100" alt="Fine Herb Dressing">
+              <img src="assets/images/food/comingsoonlogo.png" class="w-100" alt="Kimchi Fried Rice">
             </a>
             <figcaption class="mt-2">
-              <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Fine Herb Dressing</a>
+              <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Kimchi Fried Rice</a>
             </figcaption>
           </figure>
         </div>
@@ -65,10 +65,10 @@
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/comingsoon" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/comingsoonlogo.png" class="w-100" alt="Kimchi Fried Rice">
+              <img src="assets/images/food/comingsoonlogo.png" class="w-100" alt="Fine Herb Dressing">
             </a>
             <figcaption class="mt-2">
-              <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Kimchi Fried Rice</a>
+              <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Fine Herb Dressing</a>
             </figcaption>
           </figure>
         </div>
