--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <span class="ms-2 caption font-weight-medium">100% would make this again</span>
             </strong>
             <h4 class="my-3">Cinnamon Rolls</h4>
-            <p class="big pe-0 pe-md-5 pb-3 pb-sm-5 pb-lg-0">Fluffy dough, a rich cinnamon sugar filling, and a creamy cream cheese frosting make for the most perfect cinnamon roll yet.</p>
+            <p class="big pe-0 pe-md-5 pb-3 pb-sm-5 pb-lg-0">Fluffy dough, a rich cinnamon sugar filling, and a thick cream cheese frosting make for the most perfect cinnamon roll yet.</p>
             <a href="/cinnamonrolls" class="circle circle-lg tstbite-arrow">
               <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="13.333" viewBox="0 0 13.333 13.333">
                 <path d="M6.077,13.089a.833.833,0,0,1,0-1.178L10.488,7.5H.833a.833.833,0,0,1,0-1.667h9.655L6.077,1.423A.834.834,0,0,1,7.256.244l5.829,5.83a.833.833,0,0,1,0,1.186L7.256,13.089a.834.834,0,0,1-1.179,0Z" fill="#ff642f"/>
