--- a/index.html
+++ b/index.html
@@ -245,6 +245,31 @@
             </figcaption>
           </figure>
         </div>
+
+        <h6 class="pb-3 pt-5 font-weight-regular inter-font">About Me</h6>
+      <div class="bg-lightest-gray media-box mt-4 mb-md-4">
+        <div class="media mb-4">
+          <div class="d-flex align-items-center flex-wrap">
+            <a href="#0" class="tstbite-avatar lg align-self-start me-3">
+              <img class="me-3" src="assets/images/logos/aboutme.jpeg" alt="Avatar">
+            </a>
+            <div class="media-body">
+              <h5 class="f-size-24 inter-font font-weight-semibold">Emily L.</h5>
+              <span>Recipe Curator</span>
+            </div>
+          </div>
+        </div>
+        <p>Hi! Welcome to my digital cookbook, which I regularly update with my tried-and-true all-time favorite recipes. Hope you enjoy.</p>
+        <div class="tstbite-social my-4 my-md-0">
+          <a href="https://www.instagram.com/nyctreats/">
+            <svg data-name="feather-icon/instagram" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+              <rect data-name="Bounding Box" width="20" height="20" fill="rgba(255,255,255,0)"></rect>
+              <path d="M5,18.333a5.005,5.005,0,0,1-5-5V5A5.006,5.006,0,0,1,5,0h8.333a5.005,5.005,0,0,1,5,5v8.333a5,5,0,0,1-5,5ZM1.667,5v8.333A3.337,3.337,0,0,0,5,16.667h8.333a3.337,3.337,0,0,0,3.333-3.333V5a3.337,3.337,0,0,0-3.333-3.334H5A3.338,3.338,0,0,0,1.667,5Zm4.59,7.076A4.164,4.164,0,1,1,9.2,13.3,4.161,4.161,0,0,1,6.256,12.076Zm.713-4.07a2.5,2.5,0,1,0,2.6-1.348A2.527,2.527,0,0,0,9.2,6.631,2.487,2.487,0,0,0,6.97,8.006Zm6.191-2.833a.833.833,0,1,1,.589.244A.834.834,0,0,1,13.161,5.173Z" transform="translate(0.833 0.833)" fill="#000000"></path>
+            </svg>
+          </a>
+        </div>
+      </div>
+
         <!-- <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a href="/other" class="tstbite-animation stretched-link rounded-circle">
